fixed product show - fixed bug image not showing in mobile

--- a/resources/assets/sass/web_v2/_buttons.scss
+++ b/resources/assets/sass/web_v2/_buttons.scss
@@ -1,4 +1,4 @@
-.btn-orange{
+.btn-orange, .btn-orange:focus{
 	background: #white;
 	border-color: #ff6600;
     color: #ff6600;
